--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,8 @@ dependencies:
     sdk: flutter
   introduction_screen: ^1.0.7
   carousel_slider: ^2.3.1
-
+  loadmore: ^1.0.4
+  dio: ^3.0.10
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -50,9 +51,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+    - images/sample.png
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
