--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
     sdk: flutter
   introduction_screen: ^1.0.7
   carousel_slider: ^2.3.1
+  cached_network_image: ^2.5.0
   loadmore: ^1.0.4
   dio: ^3.0.10
   # The following adds the Cupertino Icons font to your application.
